--- a/The Odin Project/HTML Only/2 Rappler Pets/index.html
+++ b/The Odin Project/HTML Only/2 Rappler Pets/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta CHARSET = "utf-8">
-        <title>KP1 First Webpage</title>
+        <title>Pets</title>
     </head>
 
     <body>
-        <h1>This is a heading 1</h1>
-        <h2>This is a heading 2</h2>
-        <h3>This is a heading 3</h3>
-        <h4>This is a heading 4</h4>
-        <h5>This is a heading 5</h5>
-        <h6>This is a heading 6</h6>
+        <h1>Mystery Illness affecting dogs across the United States</h1>
+        <h5>NOV 30, 2023 9:36 PM PHT</h5>
+        <h5>REUTERS</h5>
+        <h2> IMAGE HERE</h2>
+        <p>Symptoms including <em>coughing</em> that can last four to six weeks, 
+            which could be mild <strong>bronchitis</strong> or could escalate to <strong>pneumonia</strong>. Some acute cases have quickly become pneumonia within 24 to 36 hours. </p>
+        <p>A mystery respiratory illness has stricken dogs in at least 14 states, according to the American Veterinary Medical Association, which is asking vets to report cases while laboratories race to isolate the pathogen.</p>
     </body>
 </html>
