--- a/The Odin Project/HTML Only/3 Lists/index.html
+++ b/The Odin Project/HTML Only/3 Lists/index.html
@@ -2,21 +2,21 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <title>Lists</title>
+        <title>Lists</title> <!--Introduction to Lists!-->
     </head>
 
     <body>
-        <h1>Introduction to Lists in HTML</h1>
+        <h1>Fishball Quick SnackL</h1>
         <p>This is a page for a quick snack with fishball.</p>
         <h2>Buy the following:</h2>
-            <ul>
+            <ul> <!--Unordered Lists!-->
                 <li>Fishball</li>
                 <li>Suka</li>
                 <li>Chili Powder</li>
                 <li>Sago't Gulaman</li>
             </ul>
         <h3>Preparation:</h3>
-            <ol>
+            <ol> <!--Ordered Lists!-->
                 <li> Get a bowl.</li>
                 <li> Mix the suka and chili powder.</li>
                 <li> Get another bowl and a fork.</li>
